[package]
name = "clusterjunk"
version = "0.1.0"
publish = false
authors = ["Ian Chamberlain <ian.h.chamberlain@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
    "bevy_rapier2d/debug-render",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_asset_loader = { version = "0.12" }
bevy_kira_audio = { version = "0.12" }
bevy_rapier2d = "0.16.1"
rand = "0.8.3"

[build-dependencies]
embed-resource = "1.4"
