[package]
name = "clusterjunk"
version = "0.1.0"
publish = false
authors = ["Ian Chamberlain <ian.h.chamberlain@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
    "bevy_rapier2d/debug-render",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_asset_loader = { version = "0.12" }
bevy_kira_audio = { version = "0.12" }
bevy_rapier2d = "0.16.2"
bitflags = "1.3.2"
rand = "0.8.3"
tuples = "1.6.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.26.0", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
